[MPMD-289] - check: unable to find pmd.xml
XML report is now created always, regardless of the format
configured.